# sniplet

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json
.cursor/hooks/state/: continual-learning.json
.github/workflows/: ci.yml  release.yml
.tmp-demo-app/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
.tmp-demo-app/android-overlay/: keystore.properties.example
.tmp-demo-app/android-overlay/app/: build.gradle.kts
.tmp-demo-app/docs/: BUILD.md
.tmp-demo-app/infra/android/: SIGNING.md
.tmp-demo-app/scripts/: android-build.ps1  android-build.sh  release.ps1  release.sh
.tmp-demo-app/src/: App.tsx
.tmp-demo-app/src-tauri/: Cargo.toml  tauri.conf.json
.tmp-demo-app/src-tauri/capabilities/: default.json
.tmp-demo-app/src-tauri/src/: main.rs
docs/: ACTIVITY_LOG.md  ANDROID_BUILD.md  ARCHITECTURE.md  RELEASE.md
infra/android/: SIGNING.md  gradle.properties.snippet  keystore.properties.example
scripts/: android-build.ps1  android-build.sh  ci-prepare-android.sh  create-app.ps1  create-app.sh  release.ps1  release.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/github/: mod.rs
src-tauri/src/models/: mod.rs  snippet.rs
src-tauri/src/storage/: mod.rs
src/__tests__/: snippet.test.ts  snippetStorage.test.ts
src/components/: GitHubSyncPanel.tsx  QuickImportFab.tsx  SearchToolbar.tsx  SnippetCard.tsx  SnippetEditor.tsx
src/lib/: api.ts  clipboard.ts  githubSync.ts  languages.ts  snippetStorage.ts  types.ts
src/store/: snippetStore.ts
src/theme/: theme.ts
template/: README.md
template/tauri-react-mobile/: README.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
template/tauri-react-mobile/src-tauri/: Cargo.toml  tauri.conf.json
template/tauri-react-mobile/src-tauri/capabilities/: default.json
template/tauri-react-mobile/src-tauri/src/: lib.rs  main.rs
(+30 files in other folders)
