[package]
name = "sniplet"
version = "0.1.1"
description = "Advanced code snippet manager with GitHub sync"
authors = ["Sniplet"]
edition = "2021"

[lib]
name = "sniplet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = { version = "2", features = ["rustls-tls-native-roots"] }
tauri-plugin-store = "2"
