[package]
name = "{{CRATE_NAME}}"
version = "0.1.0"
description = "{{APP_NAME}}"
authors = ["{{APP_NAME}}"]
edition = "2021"

[lib]
name = "{{LIB_NAME}}"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = { version = "2", features = ["rustls-tls-native-roots"] }
tauri-plugin-store = "2"
